Name: anydbm
Version: 1.0.1
License: GPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Copyright: Copyright (c) 2004-2006 John Goerzen
homepage: http://software.complete.org/anydbm
synopsis: Interface for DBM-like database systems
Stability: Stable
Hs-Source-Dirs: src
Exposed-Modules: Database.AnyDBM,
    Database.AnyDBM.MapDBM,
    Database.AnyDBM.StringDBM
Extensions: ExistentialQuantification, OverlappingInstances, 
   UndecidableInstances, CPP
Build-Depends: base,
               haskell98, mtl, MissingH>=0.18.0
GHC-Options: -O2

Executable: runtests
Buildable: False
Main-Is: runtests.hs
HS-Source-Dirs: testsrc, .
Extensions: ExistentialQuantification, OverlappingInstances,
    UndecidableInstances, CPP
